# timeros

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  states.py  task_agent.py
app/ai_providers/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
app/api/: dependencies.py
app/api/routes/: executions.py  tasks.py
app/core/: database.py  executor.py  models.py  scheduler.py  schemas.py  task_parser.py
app/llm/: __init__.py  factory.py
app/services/: execution_service.py  task_service.py
app/tools/: __init__.py  data_analyzer.py  email_client.py  langchain_tools.py  notion_client.py  web_search.py
app/utils/: exceptions.py  helpers.py  logger.py
config/: settings.py
docs/: README.md  architecture.md  troubleshooting.md
docs/api/: rest_api.md
docs/deployment/: local_setup.md  production_deployment.md
docs/development/: coding_standards.md  common_components.md  contributing.md
docs/modules/: ai_providers.md  executor.md  scheduler.md  task_parser.md
docs/modules/tools/: data_analyzer.md  email_client.md  notion_client.md  web_search.md
migrations/: README.md  alembic.ini  env.py
migrations/versions/: .gitkeep
scripts/: init.sql  init_db.py  migrate.py  schema.sql
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_task_parser.py
